<?xml version="1.0"?>
<package format="2">
  <name>be_description</name>
  <version>0.0.0</version>
  <description>The be_description package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="yazanrihan@gmail.com">Yazan Rihan</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>p3dx_robot</build_depend>
  <build_depend>p3dx_cyton1500_fusion</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>p3dx_robot</exec_depend>
  <exec_depend>p3dx_cyton1500_fusion</exec_depend>

</package>
